# apps.core.preloaded.volume-app

./: AUTHORS  CMakeLists.txt  INSTALL  NOTICE  org.tizen.volume.desktop.in  org.tizen.volume.efl  org.tizen.volume.manifest  org.tizen.volume.rule  org.tizen.volume.xml  project.config  volume.manifest
data/: CMakeLists.txt  volume.edc  volume_app.edc  volume_popup.edc
debian/: changelog  control  org.tizen.volume.install.in  rules
include/: _util_efl.h  _util_log.h  bt.h  control.h  key_event.h  main.h  sound.h  timer.h  view.h  x_event.h
packaging/: org.tizen.volume.spec
po/: CMakeLists.txt  POTFILES.in  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  fr_FR.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  mn_MN.po  nb.po  (+20 more)
src/: _button.c  _button.h  _logic.c  _logic.h  _sound.c  _sound.h  _util_efl.c  _util_efl.h  _util_log.h  bt.c  control.c  format  key_event.c  main.c  sound.c  timer.c  view.c  volume.c  volume.h  x_event.c
