CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# install edj
ADD_CUSTOM_COMMAND(OUTPUT volume.edj
		COMMAND edje_cc -id ${CMAKE_CURRENT_SOURCE_DIR}/images/private
		${CMAKE_CURRENT_SOURCE_DIR}/volume.edc ${CMAKE_BINARY_DIR}/volume.edj
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/volume.edc
)
ADD_CUSTOM_TARGET(edj_build DEPENDS volume.edj)
ADD_DEPENDENCIES(${PROJECT_NAME} edj_build)
INSTALL(FILES ${CMAKE_BINARY_DIR}/volume.edj DESTINATION ${EDJDIR})

# install images
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/images/public/ DESTINATION ${IMAGEDIR} FILES_MATCHING PATTERN "*.png")

